Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-130

Compile fails on gcc4.1

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Build
    • None
    • Linux FC5 machine (g++ version 4.1)

    Description

      Fails to build with g++ 4.1 due to extra class qualification in include/log4cxx/xml/domconfigurator.h:249 and include/log4cxx/helpers/unicodehelper.h:98

      Attachments

        Activity

          People

            andreas Andreas Hartmann
            andreas Andreas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: