LOGCXX-130: removed extra class qualifications